# voice-only-discord

./: .gitignore  pyproject.toml
research/: BAKEOFF-abaddon-con.md  BAKEOFF-abaddon-pro.md  BAKEOFF-cpp-con.md  BAKEOFF-cpp-pro.md  BAKEOFF-python-con.md  BAKEOFF-python-pro.md  BLOCKER-auth-and-tokens.md  BLOCKER-fingerprinting-and-detection.md  BLOCKER-gateway-and-voice.md  BLOCKER-tos-and-ban-risk.md  DESIGN-minimal-native.md  DESIGN-webview-shell.md  DESIGN-wildcard.md  LANG-cpp.md  LANG-csharp.md  LANG-python.md  LANG-rust.md  VERIFY-dave-abaddon.md  VERIFY-dave-cpp.md  VERIFY-dave-python.md
spike/: README.md  voice_recv_spike.py
vodiscord/: __init__.py  __main__.py  main.py
