[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vodiscord"
version = "0.1.0"
description = "Minimal voice-only Discord client"
license = "MIT"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Benjamin Larson" },
]

dependencies = [
    # discord.py-self 2.1.0's [voice] extra hard-pins davey==0.1.0 (verified by
    # inspecting Requires-Dist). The plan called for davey>=0.1.5 (OpenMLS sec
    # fix), but pip's resolver cannot satisfy that against the upstream pin.
    # Accepting davey 0.1.0 for v0.1 — upgrade when discord.py-self bumps it.
    "discord.py-self[voice]==2.1.0",
    "curl_cffi>=0.15.0,<0.16",
    "PySide6>=6.7,<6.9",
    "qasync>=0.27.1",
    "keyring>=25",
    "sounddevice>=0.5",
    "pynput>=1.7.7",
    # aiohttp pin floor — discord.py-self requires >=3.7.4 already
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "nuitka>=2.6",
    "zstandard>=0.22",
]

# discord-ext-voice-recv is the spike dep (gated on selfbot compatibility).
# Kept as a top-level extra so it can be installed/skipped independently.
recv = [
    "discord-ext-voice-recv",
]

[project.scripts]
vodiscord = "vodiscord.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["vodiscord"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = ["E501", "PLR0913"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
